# PythonModuleWithCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  dllmain.cpp  python_test.vcxproj
PythonExtention/: CMakeLists.txt  python_matrix.cc
docs/: Extend Python with C_C++_写属于你的Python module - 简书.html  使用C_C++代码编写Python模块 - 银魔术师 - 博客园.html  如何用C++ 写Python模块扩展（一） - 农药GG - 博客园.html
docs/Extend Python with C_C++_写属于你的Python module - 简书_files/: 00d37ebe-1050-40a7-9f5c-0f38e7373002  ads(1).html  ads(2).html  ads.html  cookie_push(1).html  cookie_push.html  hm.js.下载  saved_resource.html
docs/使用C_C++代码编写Python模块 - 银魔术师 - 博客园_files/: saved_resource.html
scripts/: bird.py  module_class.pyd
scripts/py37/: bird.py  module_class.pyd
scripts/py38/: bird.pyd  module_func.pyd
src/: class.cpp  common.cpp  common.h  func.cpp
with_vs/: dllmain.cpp  python_test.vcxproj
